@@ -14,8 +14,11 @@ Version 0.9-3
       Update #define _XOPEN_SOURCE  to #define _XOPEN_SOURCE 700 in sddefs.h (mult define errors when compiling)
  
       Add correction to handle SIGPIPE Error in op_writeskt() (WRITE.SOCKET)  issue #89 / ScarletDME 
- 
+  
+      sdnet.h:
+	    replace termio.h (is obsolete) with termios.h  sys/ioctl.h
 
+      installsd.sh - always set ownership (these could get messed up if sdsys and sdusers group gets deleted during deletesd.sh script) 
 
 Version 0.9-2
 
